# BasketballSim

./: .Rhistory  2014-2015_Schedule_Results.csv  2016schedule.csv  2016schedule.txt  CMakeLists.txt  ENGS 65 Project Report.docx  NAB 2K16 Ratings.csv  NBA 2K16 Ratings.csv  NBA_roster_ratings.csv  NBAplayers.csv  NBAroster.csv  Player.cpp  Player.h  ProbMatrix.cpp  ProbMatrix.h  Project3.sln  Project3.vcxproj  Project3.vcxproj.filters  RosterRanks.csv  RosterWebScraper.R  Team.cpp  Team.h  main.cpp  maintest.cpp  probs.txt  read_csv.cpp  sym_mat.cpp  sym_mat.h  team_counts.csv  ~$GS 65 Project Report.docx
Debug/: BallSim.ilk  Project3.ilk  vc120.idb
Debug/BallSim.tlog/: BallSim.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/Project3.tlog/: CL.read.1.tlog  CL.write.1.tlog  Project3.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
